updated dependency version ranges.

--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.mongodb.morphia</groupId>
 	<artifactId>morphia-gwt</artifactId>
-	<version>0.107.3-SNAPSHOT</version>
+	<version>0.107.3-alpha</version>
+<!-- 	<version>0.107.3-SNAPSHOT</version> -->
 	<packaging>jar</packaging>
 	<name>morphia-gwt</name>
 	<description>Morphia GWT Extension</description>
@@ -36,9 +37,9 @@
 	</developers>
 
 	<properties>
-		<morphia.version>0.107</morphia.version>
-		<mongo-java-driver.version>2.11.4</mongo-java-driver.version>
-		<gwt.version>2.5.1</gwt.version>
+		<morphia.version>[0.105,)</morphia.version>
+		<mongo-java-driver.version>[2.5,)</mongo-java-driver.version>
+		<gwt.version>[2.5.0,)</gwt.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
